Revision history for Dist-Zilla-PluginBundle-Author-SKIRMESS

{{$NEXT}}

  - Added Dist::Zilla::Plugin::Author::SKIRMESS::Test::XT::Test::Changes
  - Added Test::CPAN::Changes release test
  - Added 'theme = core' to .perlcriticrc
  - Added Dist::Zilla::Plugin::Author::SKIRMESS::Test::XT::Test::EOL
  - Added Test::EOL release test
  - Also scan files under t and xt with Test::Spelling
  - Allow travis_ci_ignore_perl configuration option for dist.ini
  - Added Dist::Zilla::Plugin::Author::SKIRMESS::Perl::Tidy::RC
  - Automatically create the .perltidyrc file
  - Run 'make manifest' on TravisCI before running release tests
  - No longer set AUTHOR_TESTING env variable on TravisCI because we don't
    check for that anymore
  - Run xt/release tests on TravisCI
  - Automatically create the .travis.yml file
  - Added Dist::Zilla::Plugin::Author::SKIRMESS::TravisCI
  - Skip pod-no404s.t author tests during AUTOMATED_TESTING
  - Add .perltidyrc to the distribution
  - Moved xt/author/perlcriticrc to .perlcriticrc
  - No longer define a -profile for Test::Perl::Critic as the .perlcriticrc
    is now in the cwd

0.005  2017-08-26 18:55:22 UTC

  - A default Perl::Critic config file xt/author/perlcriticrc is created if
    none exists. Existing files are not changed
  - Added Dist::Zilla::Plugin::Author::SKIRMESS::Test::XT::Test::CPAN::Meta
  - Added
    Dist::Zilla::Plugin::Author::SKIRMESS::Test::XT::Test::CPAN::Meta::JSON
  - Added Dist::Zilla::Plugin::Author::SKIRMESS::Test::XT::Test::DistManifest
  - Added Dist::Zilla::Plugin::Author::SKIRMESS::Test::XT::Test::Kwalitee
  - Added
    Dist::Zilla::Plugin::Author::SKIRMESS::Test::XT::Test::MinimumVersion
  - Added Dist::Zilla::Plugin::Author::SKIRMESS::Test::XT::Test::Mojibake
  - Added Dist::Zilla::Plugin::Author::SKIRMESS::Test::XT::Test::NoTabs
  - Added Dist::Zilla::Plugin::Author::SKIRMESS::Test::XT::Test::Perl::Critic
  - Added Dist::Zilla::Plugin::Author::SKIRMESS::Test::XT::Test::Pod