@@ -1,0 +1,12 @@
+#!perl
+
+use 5.006;
+use strict;
+use warnings;
+
+# this test was generated with
+# Dist::Zilla::Plugin::Author::SKIRMESS::Test::XT::Test::CleanNamespaces 0.005
+
+use Test::CleanNamespaces;
+
+all_namespaces_clean();
